# hekate

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  NOTICE  README.md  SECURITY.md  deny.toml  docker-compose.sqlite.yml  docker-compose.yml
.cargo/: audit.toml
.githooks/: pre-commit
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
clients/desktop/: README.md
clients/desktop/src-tauri/: .gitignore  Cargo.toml  build.rs  entitlements.plist  tauri.conf.json
clients/desktop/src-tauri/capabilities/: default.json
clients/desktop/src-tauri/icons/: icon.icns
clients/desktop/src-tauri/src/: biometric.rs  main.rs
clients/desktop/src-tauri/swift-lib/: biometric.swift
clients/extension/: COMPILEandDEBUG.md  README.md  background.js  manifest.firefox.json  manifest.json  offscreen.html  offscreen.js
clients/extension/popup/: popup.css  popup.html  popup.js
clients/web/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
clients/web/src/: main.tsx  wasm-types.ts  wasm.ts
clients/web/src/lib/: accountExport.ts  api.ts  attachments.ts  auth.ts  base64.ts  biometric.ts  changePassword.ts  cipher.ts  cipherWrite.ts  clipboard.ts  config.ts  deleteAccount.ts  dialog.ts  generate.ts  manifest.ts  orgPins.ts  orgWrite.ts  orgs.ts  passwordGen.ts  peerPins.ts  register.ts  rotateKeys.ts  sendApi.ts  session.ts  shareUrl.ts  strictManifest.ts  sync.ts  totp.ts  twoFactorApi.ts  webauthn.ts
clients/web/src/routes/desktop/: DesktopOwner.tsx  ServerConfig.tsx
clients/web/src/routes/owner/: AccountExport.tsx  AttachmentsSection.tsx  ChangePassword.tsx  CipherDetail.tsx  Collections.tsx  CreateOrg.tsx  DeleteAccount.tsx  EditCipher.tsx  Generator.tsx  Import.tsx  InvitePeer.tsx  InvitesList.tsx  Login.tsx  NewFileSend.tsx  NewTextSend.tsx  OrgDetail.tsx  OrgsList.tsx  Owner.tsx  PeerPins.tsx  Register.tsx  Resume.tsx  RotateKeys.tsx  SendCreated.tsx  SendsList.tsx  TrashView.tsx  TwoFactor.tsx  TwoFactorSettings.tsx  TypePicker.tsx  Unlocked.tsx  Vault.tsx
clients/web/src/routes/recipient/: Recipient.tsx
clients/web/src/ui/: DialogHost.tsx  Shell.tsx  icons.tsx  tokens.css
crates/hekate-cli/: Cargo.toml
crates/hekate-cli/src/: api.rs  crypto.rs  main.rs  manifest.rs  org_cipher_manifest.rs  org_sync.rs  policies.rs  prompt.rs  state.rs  totp.rs
crates/hekate-cli/src/commands/: account.rs  add.rs  attach.rs  config.rs  delete.rs  edit.rs  generate.rs  import.rs  list.rs  lock.rs  login.rs  logout.rs  mod.rs  move_cipher.rs  org.rs  peer.rs  purge.rs  register.rs  restore.rs  send.rs  show.rs  ssh_agent.rs  status.rs  sync.rs  token.rs  ttl.rs  two_factor.rs  unlock.rs  watch.rs  webhook.rs
crates/hekate-cli/src/daemon/: client.rs  mod.rs  server.rs
crates/hekate-core/: Cargo.toml
crates/hekate-core/src/: attachment.rs  cipher_id.rs  encstring.rs  error.rs  generate.rs  import_1password.rs  import_bitwarden.rs  import_keepass.rs  import_lastpass.rs  kdf.rs  keypair.rs  lib.rs  manifest.rs  org_cipher_manifest.rs  org_roster.rs  passkey.rs  send.rs  signcrypt.rs  totp.rs  wasm.rs
crates/hekate-core/tests/: import_1password_fixture.rs  import_bitwarden_fixture.rs  import_lastpass_fixture.rs
crates/hekate-core/tests/fixtures/: 1password_export.data.json  bitwarden_export.json  lastpass_export.csv
crates/hekate-server/: Cargo.toml
crates/hekate-server/src/: attachments_gc.rs  blob.rs  config.rs  cors.rs  db.rs  lib.rs  main.rs  openapi.rs  perms.rs  push.rs  rate_limit.rs  webhook_url.rs  webhooks.rs
crates/hekate-server/src/auth/: extractor.rs  jwt.rs  mod.rs  password.rs  pat.rs  refresh.rs  sat.rs  scope.rs
crates/hekate-server/src/routes/: account.rs  account_tokens.rs  account_webhooks.rs  accounts.rs  api.rs  attachments.rs  ciphers.rs  collections.rs  folders.rs  health.rs  identity.rs  mod.rs  org_cipher_manifest.rs  orgs.rs  policies.rs  pubkeys.rs  push.rs  root.rs  sends.rs  service_accounts.rs  sync.rs  two_factor.rs  two_factor_webauthn.rs  vault_manifest.rs  web_app.rs
crates/hekate-server/tests/: attachments.rs  cors.rs  manifest.rs  orgs.rs  pats.rs  pubkeys.rs  refresh.rs  register_login.rs  rotate_keys.rs  sends.rs  service_accounts.rs  tfa.rs  vault.rs  web_app.rs  webauthn.rs  webhooks.rs
docker/: dev.dockerfile
docs/: api.md  audit-package.md  audit-scope.md  browser-extension.md  crypto-inventory.md  design.md  desktop-touch-id.md  development.md  distribution.md  features.md  followups.md  key-hierarchy.md  m4-organizations.md  m5-security-review.md  m5-trust-ux.md  m6-secrets-manager.md  privacy-policy.md  secure-coding.md  security-review-existing.md  security-sweep-findings.md  ssh-agent.md  status.md  store-listings.md  threat-model-gaps.md  trust-boundaries.md
migrations/: 0001_baseline.sql  0002_send_download_token_hash.sql
scripts/: smoke-org.sh  smoke.sh
